@@ -90,6 +90,8 @@ differently).
 
 *** HOL ***
 
+* Code generation for SML and OCaml: dropped arcane "no_signatures" option.
+
 * Simproc "finite_Collect" is no longer enabled by default, due to
 spurious crashes and other surprises.  Potential INCOMPATIBILITY.
 
